generate csvFile in 00:00 for stock save scvFile in DB getter scvFile from DB