@@ -17,11 +17,14 @@ import org.promocat.promocat.mapper.UserMapper;
 import org.promocat.promocat.utils.CSVGenerator;
 import org.promocat.promocat.validators.StockDurationConstraintValidator;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.scheduling.annotation.EnableScheduling;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 
+import java.io.File;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
@@ -37,6 +40,9 @@ import java.util.stream.Collectors;
 @Service
 public class StockService {
 
+    @Value("${data.codes.files}")
+    private String PATH;
+
     private final StockMapper mapper;
     private final StockRepository repository;
     private final StockCityService stockCityService;
@@ -44,6 +50,7 @@ public class StockService {
     private final ParametersService parametersService;
     private final UserRepository userRepository;
     private final UserMapper userMapper;
+    private final CSVGenerator csvGenerator;
 
     @Autowired
     public StockService(final StockMapper mapper,
@@ -52,7 +59,7 @@ public class StockService {
                         final CityService cityService,
                         final ParametersService parametersService,
                         final UserRepository userRepository,
-                        final UserMapper userMapper) {
+                        final UserMapper userMapper, CSVGenerator csvGenerator) {
         this.mapper = mapper;
         this.repository = repository;
         this.stockCityService = stockCityService;
@@ -60,6 +67,7 @@ public class StockService {
         this.parametersService = parametersService;
         this.userRepository = userRepository;
         this.userMapper = userMapper;
+        this.csvGenerator = csvGenerator;
     }
 
     /**
@@ -134,7 +142,7 @@ public class StockService {
             List<StockDTO> stocks = getByTime(LocalDateTime.now().minusDays(day), day);
             stocks.forEach(e -> {
                 e.setStatus(StockStatus.STOCK_IS_OVER_WITHOUT_POSTPAY);
-                Path path = Path.of("src", "main", "resources", e.getName() + e.getId().toString());
+                Path path = Paths.get(PATH, e.getName() + e.getId().toString() + ".csv");
                 save(e);
                 if (Objects.isNull(e.getCities())) {
                     return;
@@ -147,7 +155,9 @@ public class StockService {
                             users.add(y);
                             userRepository.save(userMapper.toEntity(y));
                         });
-                CSVGenerator.generate(path, users);
+                csvGenerator.generate(path, users);
+                File file = path.toFile();
+                file.delete();
             });
         }
     }
